Editing in Projects Detail

--- a/client/src/Components/ComCourses.css
+++ b/client/src/Components/ComCourses.css
@@ -5,3 +5,8 @@
     background: var(--primary-dark);
     color: white;
 }
+
+.react-slideshow-container .default-nav{
+    background: rgba(255, 0, 0, 0) !important;
+    box-shadow: none;
+}
