--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -5,14 +5,19 @@
 }
 .Ccourses_banner{
     position: relative;
-    height: 68vh;
+    height: 520px;
     padding: 0;
-    background-image: url(../images/VExtor.png);
-    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+}
+.Ccourses_banner_image{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .Ccourses_banner_info{
     display: flex;
@@ -194,8 +199,8 @@
     justify-content: center;
 }
 .Ccourses_item_projects > div > div{
-    width: 25px;
-    height: 30px;
+    width: 20px;
+    height: 25px;
 }
 .Ccourses_item_projects > div > div img{
     width: 100%;
@@ -203,7 +208,6 @@
     margin: 0 5px;
 }
 .Ccourses_item_projects > div span{
-    font-size: 1.1em;
     margin: 0 15px;
     padding-right: 30px;
 }
