--- a/client/src/Components/Services.module.css
+++ b/client/src/Components/Services.module.css
@@ -32,9 +32,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-
-
-
+   padding-bottom: 10px;
 }
 
 .main{
@@ -60,12 +58,18 @@
 }
 
 .main:hover .heading{
-    color: var(--primary-light);
+
+    color: var(--primary-dark);
+
 }
 
-.main:hover .content{
+/* .main:hover .heading{
     color: var(--primary-light);
-}
+} */
+
+/* .main:hover .content{
+    color: var(--primary-light);
+} */
 
 .icon{
     color: var(--primary-light);
