--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -153,7 +153,7 @@
     padding: 5px 20px;
     border-radius: 5px;
     margin: 10px;
-    background-color: #F2F1EC;
+    background-color: #F7F8FA;
 }
 .courses_St_Info2 p{
     color: #999;
