--- a/client/src/Dashboard/DashBoard.module.css
+++ b/client/src/Dashboard/DashBoard.module.css
@@ -1,7 +1,7 @@
 .MainDashBoard{
     height: 200vh;
     padding: 0;
-    background-color: red;
+    background-color: whitesmoke;
     position: absolute;
     width: 80vw;
     right: 0;
