--- a/client/src/Dashboard/TheNav.module.css
+++ b/client/src/Dashboard/TheNav.module.css
@@ -43,13 +43,16 @@
     font-size: 14px;
     color: white;
 }
+.SearchInput::placeholder{
+    font-size: 16px;
+}
 .SearchIcon{
     position: absolute;
     color: white;
     z-index: 1;
     top: 10px;
-    font-size: 25px;
-    right: 0;
+    font-size: 20px;
+    right: 5px;
     cursor: pointer;
 }
 .SearchInput:focus{
@@ -63,8 +66,8 @@
     align-items: center;
 }
 .AdminPic{
-    height: 45px;
-    width: 45px;
+    height: 30px;
+    width: 30px;
     border: 1px solid white;
     border-radius: 50%;
     margin-left: -10px;
@@ -76,10 +79,12 @@
 }
 .AdminName{
     margin-left: 5px;
-    font-size: 17px;
+    font-size: 16px;
     color: white;
     font-weight: normal;
+    margin-top: 10px;
+    cursor: pointer;
 }
 .AdminIcon{
-    font-size: 30px;  
+    font-size: 20px;
 }
