--- a/client/src/Components/Headerslider.module.css
+++ b/client/src/Components/Headerslider.module.css
@@ -12,6 +12,7 @@
 }
 
 .slide{
+    box-shadow: 1px 0px 18px -2px rgb(233, 232, 232);
     /* border: solid 5px black; */
     width: 90%;
     margin:100px auto;
@@ -22,7 +23,7 @@
 }
 
 .row{
-        background-color:rgb(253, 251, 251);
+        background-color:rgb(250, 250, 250);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -34,7 +35,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        /* box-shadow: 1px 0px 18px -2px rgba(231, 231, 231, 0.75); */
         
         
         
@@ -51,18 +51,18 @@
         padding: 0px 60px;
     }
     
-
+    
     
     .sip{
         /* background-color: gray; */
         height: 80%;
         /* border: solid 2px purple; */
-        width: 100%;
+        width: 95%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-
+    
     .imgp{
         height: 100%;
         width: 50%;
