--- a/client/src/Components/Services.module.css
+++ b/client/src/Components/Services.module.css
@@ -5,52 +5,51 @@
     background-color: rgb(250, 250, 250);
 }
 
-/* 
-:root{
-    --primary-dark:rgb(25,67,118);
-    --primary-light:rgb(70,198,206);
-    --primary-gray:rgb(167,153,153);
-
-} */
-
 .flex{
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .border{
+    padding: 20px;
     background-color: var(--primary-gray);
     background-color: rgb(250, 250, 250);
 }
 
 .headingser{
-
-   padding-top: 50px;
-   font-family: (var(--Para-fonts));
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding-bottom: 10px;
+   padding: 10px 30px 30px 30px;
+}
+
+.headingser span{
+    margin: 10px;
+    color: var(--primary-light);
+}
+
+.headingser p:nth-child(1){
+    font-family: var(--Heading-fonts);
+    font-size:2.5em;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.headingser p:nth-child(2){
+    font-size: 1.1em;
+    color: rgb(188, 183, 183);
 }
 
 .main{
-    height: 40vh;
+    height: 35vh;
     cursor: pointer;
-    width:90% ;
+    width:100% ;
     display: flex;
     align-items: center;
     flex-direction: column;
-    transition: all ease-out 0.15s;
-    top: 2rem;
-    transition: linear 0.40s;
-    /* border: solid 1px black; */
-    margin-top: 10%;
-    margin-bottom: 8%;
-
-   
-  
+    margin-bottom: 6%;
 }
 
 .main:hover{
@@ -58,365 +57,373 @@
 }
 
 .main:hover .heading{
-
     color: var(--primary-dark);
-
 }
 
-/* .main:hover .heading{
-    color: var(--primary-light);
-} */
-
-/* .main:hover .content{
-    color: var(--primary-light);
-} */
-
 .icon{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
     color: var(--primary-light);
+    background-image: url(../images/BOOKS\ DROP/Custom_Size___16.png);
+    background-size: cover;
     font-size: 2.5rem;
-    margin-bottom: 50px;
-    margin-top: 2.5rem;
     transition: all linear 0.34s;
     position: relative;
     z-index: 2;
     display: flex;
     justify-content:center;
     align-items: center;
-    
 }
 
-
-
-/* /1/ */
-
-.ico1{
+.icon img{
     position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.icon img:nth-child(1){
+    left: -10%;
+    top: 15%;
+    transition: .3s ease;
+}
+
+.icon img:nth-child(2){
+    left: -5%;
+    top: 15%;
+    transition: .6s ease;
+}
+
+.icon img:nth-child(3){
+    left: 0%;
+    top: 15%;
+    transition: .9s ease;
+}
+
+.main:hover img:nth-child(1){
+    transform: rotate(-45deg);
+    top: 44%;
+    transition: .3s;
+}
+
+.main:hover img:nth-child(2){
+    transform: rotate(-45deg);
+    top: 44%;
+    transition: .6s;
+}
+
+.main:hover img:nth-child(3){
+    transform: rotate(-45deg);
+    top: 44%;
+    transition: .9s;
+}
+
+.main1{
+    height: 35vh;
+    cursor: pointer;
+    width:100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 6%;
+}
+
+.main1:hover{
+    background-color: white;
+}
+
+.main1:hover .heading{
+    color: var(--primary-dark);
+}
+
+.icon1{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    color: var(--primary-light);
+    font-size: 2.5rem;
+    transition: all linear 0.34s;
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content:center;
     align-items: center;
-    
-    
 }
 
-.icoo1{
+.icon1 img{
     position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.main1 img:nth-child(1){
+    transition: .6s ease;
+}
+
+.main1 img:nth-child(2){
+    transition: .3s ease;
+}
+
+.main1:hover img:nth-child(1){
+    margin-top: -30px;
+    margin-left: 30px;
+    transition: .6s ease;
+}
+
+.main1:hover img:nth-child(2){
+    margin-top: -15px;
+    margin-left: 15px;
+    transition: .3s ease;
+}
+
+.main2{
+    height: 35vh;
+    cursor: pointer;
+    width:100% ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 6%;
+}
+
+.main2:hover{
+    background-color: white;
+}
+
+.main2:hover .heading{
+    color: var(--primary-dark);
+}
+
+.icon2{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    color: var(--primary-light);
+    font-size: 2.5rem;
+    transition: all linear 0.34s;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.icon2 img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.icon2 img:nth-child(1){
     opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
-    display: flex;
-    justify-content:center;
-    align-items: center;
+    transform: scale(.5);
+    transition: .5s ease;
 }
 
-.main:hover .icoo1{
+.main2:hover img:nth-child(1){
     opacity: 1;
-  transform: scale(1.15);
+    transform: scale(1);
 }
 
-.main:hover .ico1{
-
-animation: ico .5s forwards ;
-
-
-
-}
-
-
-/* /2/ */
-
-
-
-.ico2{
-    position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
+.main3{
+    height: 35vh;
+    cursor: pointer;
+    width:100% ;
     display: flex;
-    justify-content:center;
     align-items: center;
-    
+    flex-direction: column;
+    margin-bottom: 6%;
 }
 
-.icoo2{
-    position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
+.main3:hover{
+    background-color: white;
+}
+
+.main3:hover .heading{
+    color: var(--primary-dark);
+}
+
+.icon3{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    color: var(--primary-light);
+    font-size: 2.5rem;
+    transition: all linear 0.34s;
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content:center;
     align-items: center;
 }
 
-.main:hover .icoo2{
-    opacity: 1;
-  transform: scale(1.15);
-}
-
-.main:hover .ico2{
-
-animation: ico .5s forwards ;
-
-}
-
-/* /3/ */
-
-
-
-.ico3{
+.icon3 img{
     position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.icon3 img:nth-child(1){
+    top: -15%;
+    left: 0;
+    transition: .5s ease;
+}
+
+.icon3 img:nth-child(2){
+    top: 15%;
+    left: 0;
+    transition: .5s ease;
+}
+
+.main3:hover img:nth-child(1){
+    left: -15%;
+}
+
+.main3:hover img:nth-child(2){
+    left: 15%;
+}
+
+.main4{
+    height: 35vh;
+    cursor: pointer;
+    width:100% ;
     display: flex;
-    justify-content:center;
     align-items: center;
-    
-    
+    flex-direction: column;
+    margin-bottom: 6%;
 }
 
-.icoo3{
-    position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
-    display: flex;
-    justify-content:center;
-    align-items: center;
+.main4:hover{
+    background-color: white;
 }
 
-.main:hover .icoo3{
-    opacity: 1;
-  transform: scale(1.15);
+.main4:hover .heading{
+    color: var(--primary-dark);
 }
 
-.main:hover .ico3{
-
-animation: ico .5s forwards ;
-
-}
-
-
-/* /4/ */
-
-
-
-
-
-.ico4{
-    position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    
-    
-}
-
-.icoo4{
-    position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
+.icon4{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    color: var(--primary-light);
+    font-size: 2.5rem;
+    transition: all linear 0.34s;
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content:center;
     align-items: center;
 }
 
-.main:hover .icoo4{
-    opacity: 1;
-  transform: scale(1.15);
-}
-
-.main:hover .ico4{
-
-animation: ico .5s forwards ;
-
-}
-
-
-
-
-/* /5/ */
-
-
-
-.ico5{
+.icon4 img{
     position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    
-    
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.icoo5{
-    position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
-    display: flex;
-    justify-content:center;
-    align-items: center;
+.main4:hover img:nth-child(2){
+    animation: hand1 1s linear infinite alternate;
 }
-
-.main:hover .icoo5{
-    opacity: 1;
-  transform: scale(1.15);
-}
-
-.main:hover .ico5{
-
-animation: ico .5s forwards ;
-
-}
-
-
-
-
-/* /6/ */
-
-
-.ico6{
-    position: absolute;
-    background-color:var(--primary-light);
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-    z-index: -1;
-    transform: scale(0);
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    
-    
-}
-
-.icoo6{
-    position: absolute;
-    border: solid 1px var(--primary-light);
-    background-color: transparent;
-    height: 3.5rem;
-    width: 3.5rem;
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(0);
-    z-index: -2;
-    transition: 300ms;
-    display: flex;
-    justify-content:center;
-    align-items: center;
-}
-
-.main:hover .icoo6{
-    opacity: 1;
-  transform: scale(1.15);
-}
-
-.main:hover .ico6{
-
-animation: ico .5s forwards;
-
-}
-
-
-/* ///// */
-
-
-.main:hover .icon {
-
-    animation: icon .5s .1s forwards;
-
-}
-
-
-
-
-
-@keyframes icon{
-
-    0% {}
+@keyframes hand1{
+    0%{
+        transform: rotate(0deg);
+        top: 0;
+        left: 0;
+    }
     100%{
-
-        color:white
+        top: -10%;
+        left: -3%;
+        transform: rotate(-45deg);
     }
 }
 
-
-
-
-@keyframes ico{
-
-    0% {}
+.main4:hover img:nth-child(3){
+    animation: hand2 1s linear infinite alternate;
+}
+@keyframes hand2{
+    0%{
+        transform: rotate(0deg);
+        top: 0;
+        left: 0;
+    }
     100%{
-
-        transform: scale(1)
+        top: -15%;
+        left: 5%;
+        transform: rotate(45deg);
     }
 }
 
+.main5{
+    height: 35vh;
+    cursor: pointer;
+    width:100% ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 6%;
+}
 
+.main5:hover{
+    background-color: white;
+}
+
+.main5:hover .heading{
+    color: var(--primary-dark);
+}
+
+.icon5{
+    position: relative;
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    color: var(--primary-light);
+    font-size: 2.5rem;
+    transition: all linear 0.34s;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.icon5 img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.main5:hover img{
+    animation: schedule 1s linear infinite alternate;
+}
+@keyframes schedule {
+    0%{
+        top: -3%;
+    }
+    100%{
+        top: 3%;
+    }
+}
 
 .heading{
     color: black;
     font-size: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin: 10px;
 }
 
 .content{
     color: var(--primary-gray);
-    font-size: 1rem;
+    font-size: .9rem;
     text-align: center;
     line-height: 20px;
 }
